@@ -4,10 +4,12 @@ ver 3.0.0 (15.11.00)
     : 모바일 가로 사이즈 사진 크기 자동 조정 (테크니션님 제안)
     : 이메일의 자동수집을 막기위해 자바스크립트로 한글자씩 잘라 출력함
     : 권한없어도 관리 버튼 보이는 문제 해결 (태양이님 제안)
+    : 스마트 에디터 사진 첨부시 확대기능 (테크니션님 제안)
 
     miwit/HISTORY
     miwit/mw.adm/mw.config.php
     miwit/mw.lib/mw.function.lib.php
+    miwit/mw.proc/mw.file.viewer.php
     miwit/view.skin.php
     miwit/view_head.skin.php
  
